# upwork-mcp

./: .gitignore  README.md  RUNBOOK.md  mcp-config.example.json  pyproject.toml
scripts/: find_cto_jobs.py  recon.py  smoke_search.py  test_all.py
src/upwork_mcp/: __init__.py  server.py
src/upwork_mcp/browser/: __init__.py  auth.py  client.py
src/upwork_mcp/browser/pages/: __init__.py
src/upwork_mcp/tools/: __init__.py  contracts.py  jobs.py  messages.py  profile.py  proposals.py
src/upwork_mcp/utils/: __init__.py  config.py  logging.py
tests/: __init__.py  conftest.py  test_browser.py  test_tools.py
